@@ -2,19 +2,18 @@ package club.dnd5.portal.controller.api.item;
 
 import club.dnd5.portal.dto.api.FilterApi;
 import club.dnd5.portal.dto.api.FilterValueApi;
-import club.dnd5.portal.dto.api.RequestApi;
 import club.dnd5.portal.dto.api.item.ItemApi;
 import club.dnd5.portal.dto.api.item.ItemDetailApi;
 import club.dnd5.portal.dto.api.item.ItemRequestApi;
-import club.dnd5.portal.dto.api.spells.SearchRequest;
 import club.dnd5.portal.exception.PageNotFoundException;
 import club.dnd5.portal.model.book.Book;
 import club.dnd5.portal.model.book.TypeBook;
 import club.dnd5.portal.model.items.Equipment;
 import club.dnd5.portal.model.items.EquipmentType;
 import club.dnd5.portal.repository.datatable.ItemRepository;
+import club.dnd5.portal.service.SpecificationService;
 import club.dnd5.portal.util.PageAndSortUtil;
-import club.dnd5.portal.util.SpecificationUtil;
+import club.dnd5.portal.util.RandomUtils;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
@@ -26,10 +25,10 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
-import javax.persistence.criteria.Join;
-import javax.persistence.criteria.JoinType;
-import javax.persistence.criteria.Order;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Comparator;
+import java.util.List;
 import java.util.stream.Collectors;
 
 /**
@@ -40,50 +39,28 @@ import java.util.stream.Collectors;
 @RestController
 public class ItemApiController {
 	private final ItemRepository itemRepository;
+	private final SpecificationService specificationService;
 
-	@Operation( summary = "Получение краткого списка снаряжения")
+	@Operation(summary = "Получение краткого списка снаряжения")
 	@PostMapping(value = "/api/v1/items", produces = MediaType.APPLICATION_JSON_VALUE)
 	public List<ItemApi> getItem(@RequestBody ItemRequestApi request) {
-		Specification<Equipment> specification = null;
-		Optional<RequestApi> optionalRequest = Optional.ofNullable(request);
-		if (!optionalRequest.map(RequestApi::getSearch).map(SearchRequest::getValue)
-				.orElse("").isEmpty()) {
-			specification = SpecificationUtil.getSearch(request);
-		}
-		if (request.getFilter() != null) {
-			if (!request.getFilter().getBooks().isEmpty()) {
-				specification = SpecificationUtil.getAndSpecification(specification, (root, query, cb) -> {
-					Join<Book, Equipment> join = root.join("book", JoinType.INNER);
-					return join.get("source").in(request.getFilter().getBooks());
-				});
-			}
-			if (!request.getFilter().getCategories().isEmpty()) {
-				specification = SpecificationUtil.getAndSpecification(specification, (root, query, cb) -> {
-					Join<EquipmentType, Equipment> types = root.join("types", JoinType.LEFT);
-					query.distinct(true);
-					return types.in(request.getFilter().getCategories()
-						.stream()
-						.map(EquipmentType::valueOf)
-						.collect(Collectors.toList()));
-				});
-			}
-		}
-		if (request.getOrders() != null && !request.getOrders().isEmpty()) {
-			specification = SpecificationUtil.getAndSpecification(specification, (root, query, cb) -> {
-				List<Order> orders = request.getOrders().stream()
-					.map(
-						order -> "asc".equals(order.getDirection()) ? cb.asc(root.get(order.getField())) : cb.desc(root.get(order.getField()))
-					)
-					.collect(Collectors.toList());
-				query.orderBy(orders);
-				return cb.and();
-			});
-		}
+		Specification<Equipment> specification = specificationService.buildSpecification(request);
 		Pageable pageable = PageAndSortUtil.getPageable(request);
-		return itemRepository.findAll(specification, pageable).toList()
-			.stream()
-			.map(ItemApi::new)
-			.collect(Collectors.toList());
+		List<ItemApi> items;
+
+		if (request.getFilter() != null && request.getFilter().getRandom()) {
+			int sizeList = pageable.getPageSize();
+			items = RandomUtils.getRandomObjectListFromList(
+				itemRepository.findAll(specification).stream()
+					.map(ItemApi::new)
+					.collect(Collectors.toList()), sizeList);
+		} else {
+			items = itemRepository.findAll(specification, pageable).toList().stream()
+				.map(ItemApi::new)
+				.collect(Collectors.toList());
+		}
+
+		return items;
 	}
 
 	@Operation(summary = "Получение снаряжения по английскому имени")
